# Vortex

./: Flight_1093.csv  LED_simulation.py  Vortex_1093.csv  Vortex_1093_Drop.csv  Vortex_1093_Thermal.csv  cansat.txt  cansat_2023_simp.txt  fake.py  flight_path.py  main.py  mission_time.py  party_mode.py  pi5.py  pyproject.toml  read_data.py  sim_test.txt  simulation_mode.py  test_packet.py  wingstopGS.py
