[project]
name = "vortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "pyqt5>=5.0",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
]

[tool.uv]
required-environments = [ "sys_platform == 'win32' and platform_machine == 'AMD64'" , "sys_platform == 'linux' and platform_machine == 'aarch64'" ]
